[tool.poetry]
name = "slack-github-messages"
version = "0.1.0"
description = ""
authors = ["Calvin Dudek <calvindudek@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
